AOP structured logging distributed tracing 2020-10-29 - work in progress (WIP)... Fixed reflection illegal access WARNING.